--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
         "symfony/framework-bundle": "5.3.*",
         "symfony/proxy-manager-bridge": "5.3.*",
         "symfony/runtime": "5.3.*",
+        "symfony/validator": "5.3.*",
         "symfony/yaml": "5.3.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.36"
     },
     "config": {
         "optimize-autoloader": true,
